--- a/render.yaml
+++ b/render.yaml
@@ -1,27 +1,18 @@
 services:
   - type: web
     name: susep-api
-    env: node
-    buildCommand: npm install
+    runtime: node
+    region: oregon
+    plan: free
+    buildCommand: |
+      npm install
+      npm install puppeteer
     startCommand: npm start
     envVars:
       - key: NODE_ENV
         value: production
-```
-
-#### **5. Deploy no Render**
-1. Volte ao **Render.com**
-2. Clique em **"New +"** → **"Web Service"**
-3. Conecte seu repositório do GitHub
-4. Configure:
-   - **Name:** `susep-api`
-   - **Environment:** `Node`
-   - **Build Command:** `npm install`
-   - **Start Command:** `npm start`
-5. Clique em **"Create Web Service"**
-
-#### **6. Aguardar Deploy**
-- Render vai instalar e rodar (5-10 minutos)
-- Quando terminar, você terá uma URL tipo:
-```
-  https://susep-api.onrender.com
+      - key: PUPPETEER_SKIP_CHROMIUM_DOWNLOAD
+        value: "false"
+      - key: PUPPETEER_EXECUTABLE_PATH
+        value: /usr/bin/chromium-browser
+    dockerfilePath: ./Dockerfile
